server/compilers/goLiteJS/src/test/ml2/invalid/binary1.go
// invalid || arguments
package main

func main() {
    _ = true || 23
}
